--- a/Dasmoto's Arts & Crafts/proj_css.css
+++ b/Dasmoto's Arts & Crafts/proj_css.css
@@ -17,5 +17,9 @@
 }
 
 .brushes {
-    background-color: aqua;
+    color: white;
+    background-color: mediumspringgreen;
+    font-family: helvetica;
+    font-size: 32px;
+    font-weight: bold;
 }
